2007-03-27  Thien-Thi Nguyen  <ttn@gnu.org>

	* message.el (message-yank-original): Fix bug:
	Don't switch point and mark unnecessarily.

2007-03-20  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* message.el (message-required-news-headers):
	* gnus-util.el (gnus-intern-safe): Fix typo in docstring.

2007-03-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-generate-new-buffers): Change the meaning of the
	nil value; add `standard' to the choices; treat t as `unique'; improve
	doc string.
	(gnus-select-frame-set-input-focus): Autoload.
	(message-buffer-name): Search for the existing message buffer if
	message-generate-new-buffers is nil or `standard'; treat the value t of
	message-generate-new-buffers as `unique'.
	(message-pop-to-buffer): Raise the frame already displaying the message
	buffer; clear the echo area after querying.
	(message-setup): Pass the `continue' argument to compose-mail.
	(message-mail): Prefer `switch-function' if it is given; search for the
	existing message buffer if the `continue' argument is non-nil; pass
	continue and switch-function arguments to compose-mail by way of
	message-setup.
	(message-mail-other-window): Adjust argument of message-setup.
	(message-mail-other-frame): Ditto.

2007-02-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-make-in-reply-to): Quote name containing
	non-ASCII characters.  It will make the RFC2047 encoder cause an error
	if there are special characters.  Reported by NAKAJI Hiroyuki
	<nakaji@kankyo-u.ac.jp>.

2007-02-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nntp.el (nntp-never-echoes-commands)
	(nntp-open-connection-functions-never-echo-commands): New variables.
	(nntp-send-command): Use them.

2007-02-15  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* nnweb.el (nnweb-google-parse-1): Fix date parsing to also match on
	articles posted in the last 24 hours.

2007-02-14  Chong Yidong  <cyd@stupidchicken.com>

	* smiley.el (smiley-regexp-alist): Add "dead" smiley.
